--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-APP_PORT = 3000
+APP_PORT = 1337
 
 MYSQL_HOST = localhost
 MYSQL_PORT = 3306
@@ -6,5 +6,7 @@ MYSQL_DB = zzb_mall
 MYSQL_USER = root
 MYSQL_PWD = 5H@wn201402
 
-SERVICE_EMAIL = 你的邮箱地址
-EMAIL_PASS = 邮箱授权码
+JWT_SECRET = zzb
+
+SERVICE_EMAIL = 3334502209@qq.com
+EMAIL_PASS = uxjplthkhzdtcieg
