--- a/package.json
+++ b/package.json
@@ -21,9 +21,12 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "dotenv": "^16.0.1",
+    "jsonwebtoken": "^8.5.1",
     "koa": "^2.13.4",
     "koa-body": "^5.0.0",
     "koa-router": "^11.0.1",
+    "koa2-cors": "^2.0.6",
+    "log4js": "^6.6.0",
     "mysql2": "^2.3.3",
     "nodemailer": "^6.7.7",
     "sequelize": "^6.21.3"
